<resources>
    <string name="app_name">My Application</string>
    <string name="spinner_title">Select Category</string>
    <string name="basic_example">basic example</string>
    <string name="adapter_example2">adapter example 1</string>
    <string name="adapter_example3">adapter example 2</string>
    <string name="adapter_example4">adapter example 3</string>
    <string name="custom_adapter_example">custom adapter example</string>
    <string name="hashmap_adapter_example">grouped/expandable options example</string>

    <string name="adapter_example7">adapter example custom title 1</string>

    <string name="adapter_example8">adapter example custom title 2</string>

    <string name="adapter_example9">adapter example custom title 3</string>
    <string name="adapter_example10">adapter example custom title 4</string>

    <string name="title">Select Type</string>

    <string name="action_settings">Settings</string>

</resources>
