<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_element"
    android:weightSum="1">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <TextView android:text="@string/basic_example" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <TextView android:text="@string/adapter_example2" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <TextView android:text="@string/adapter_example3" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <TextView android:text="@string/adapter_example4" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <TextView android:text="@string/custom_adapter_example" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <TextView android:text="@string/hashmap_adapter_example" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />@drawable/

  <io.apptik.widget.multiselectspinner.ExpandableMultiSelectSpinner
      android:id="@+id/multiselectSpinner6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <TextView android:text="@string/adapter_example7" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
     app:titleDividerDrawable="@drawable/custom_divider"
      />

  <TextView android:text="@string/adapter_example8" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:titleDividerColor="#0f0"
      />

  <TextView android:text="@string/adapter_example9" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner9"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:choiceDialogTheme="@style/CustomAlertDialogTheme"
      />

  <TextView android:text="@string/adapter_example10" android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:choiceDialogTheme="@style/AnotherCustomAlertDialogTheme"
      />

  <TextView android:text="selec iem"
      android:ems="10"  android:layout_width="wrap_content"
      android:layout_height="wrap_content" android:id="@+id/sel" />


</LinearLayout></ScrollView>

  <!--
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <io.apptik.widget.multiselectspinner.MultiSelectSpinner
      android:id="@+id/multiselectSpinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <Button
      android:id="@+id/button7"
      android:layout_width="127dp"
      android:layout_height="48dp"
      android:text="skip"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginStart="16dp" />

  <Button
      android:id="@+id/button15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="appl"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginEnd="8dp" />

  <Spinner
      android:id="@+id/spinner2"
      android:layout_width="312dp"
      android:layout_height="39dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="71dp"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.142"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="175dp"
      android:layout_height="30dp"
      android:text="Preferences.."
      android:layout_marginRight="8dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginLeft="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="16dp"
      app:layout_constraintHorizontal_bias="0.0" />

  <LinearLayout
      android:id="@+id/preferences"
      android:layout_width="362dp"
      android:layout_height="219dp"
      android:layout_marginTop="14dp"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@+id/spinner2"
      tools:layout_editor_absoluteX="6dp"></LinearLayout>
</ScrollView>-
  <com.androidbuts.multispinnerfilter.MultiSpinner
      android:id="@+id/simpleMultiSpinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:visibility="gone"
      app:hintText="Multi Selection" />

  <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
      android:id="@+id/searchMultiSpinnerUnlimited"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:hintText="Multi Selection With Filter Without Limit" />

  <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
      android:id="@+id/searchMultiSpinnerLimit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:hintText="Multi Selection With Filter And Limit" />

  <com.androidbuts.multispinnerfilter.SingleSpinnerSearch
      android:id="@+id/searchSingleSpinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:hintText="Single Selection With Filter" />

  <com.androidbuts.multispinnerfilter.SingleSpinner
      android:id="@+id/singleSpinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:hintText="Single Selection" />

-->

</LinearLayout>